kubernetes/network-policy/simple-web-app/maniefsts/policies/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-policy
  namespace: application
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: application
    - ipBlock:
        cidr: 10.164.0.0/20 # GKE Nodes CIDR
    - ipBlock:
        cidr: 35.191.0.0/16 # Google HealthCheck CIDR
    - ipBlock:
        cidr: 130.211.0.0/22 # Google HealthCheck CIDR
    - ipBlock:
        cidr: 209.85.152.0/22 # Google HealthCheck CIDR
    - ipBlock:
        cidr: 209.85.204.0/22 # Google HealthCheck CIDR
  podSelector: {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: backend
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: application
    - namespaceSelector:
        matchLabels:
          env: backend
    - ipBlock:
        cidr: 10.164.0.0/20 # GKE Nodes CIDR
    - ipBlock:
        cidr: 35.191.0.0/16 # Google HealthCheck CIDR
    - ipBlock:
        cidr: 130.211.0.0/22 # Google HealthCheck CIDR
    - ipBlock:
        cidr: 209.85.152.0/22 # Google HealthCheck CIDR
    - ipBlock:
        cidr: 209.85.204.0/22 # Google HealthCheck CIDR
  podSelector: {}
  policyTypes:
  - Ingress
